[gd_scene load_steps=14 format=3 uid="uid://cf6i5afx50h3"]

[ext_resource type="Script" uid="uid://bg7on8ssfugqj" path="res://scenes/test/test_boss_scene.gd" id="1_b33x6"]
[ext_resource type="PackedScene" uid="uid://cplrhnikvgwm3" path="res://ui/in-game/game_ui.tscn" id="2_t4igd"]
[ext_resource type="PackedScene" uid="uid://bhmxaitsaqnl3" path="res://environment/infinite_world.tscn" id="2_x8b0c"]
[ext_resource type="PackedScene" uid="uid://gdo7fmio88fn" path="res://player/player.tscn" id="3_gx567"]
[ext_resource type="PackedScene" uid="uid://b6ahrxr82mhqj" path="res://items/guns/sniper/sniper_collectible.tscn" id="4_d3rn1"]
[ext_resource type="PackedScene" uid="uid://upsgg7tvmfqf" path="res://items/guns/shotgun/shotgun_collectible.tscn" id="5_j8i33"]
[ext_resource type="PackedScene" uid="uid://n8mqdn0tb65" path="res://items/guns/rifle/rifle_collectible.tscn" id="6_fsmji"]
[ext_resource type="PackedScene" uid="uid://bspw82fhsmgk3" path="res://items/guns/pistol/pistol_collectible.tscn" id="7_ct2rc"]
[ext_resource type="PackedScene" uid="uid://bjac33uc3ygca" path="res://items/guns/flamethrower/flamethrower_collectible.tscn" id="8_gm5sp"]
[ext_resource type="Texture2D" uid="uid://dwuk1wotf6y50" path="res://assets/sprites/shadow.png" id="9_t1f5j"]
[ext_resource type="PackedScene" uid="uid://cal4x5wbe2maf" path="res://ui/in-game/boss_ui.tscn" id="13_t3osn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jsa5v"]

[sub_resource type="LabelSettings" id="LabelSettings_bjwww"]
font_size = 12

[node name="TestBossScene" type="Node2D"]
script = ExtResource("1_b33x6")

[node name="InfiniteWorld" parent="." instance=ExtResource("2_x8b0c")]

[node name="BossSpawnTrigger" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(448, 369)

[node name="Sprite2D" type="Sprite2D" parent="BossSpawnTrigger"]
position = Vector2(0, -10)
scale = Vector2(1.14361, 2.52)
texture = ExtResource("9_t1f5j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossSpawnTrigger"]
shape = SubResource("RectangleShape2D_jsa5v")

[node name="Label" type="Label" parent="BossSpawnTrigger"]
offset_left = -13.0
offset_top = 6.0
offset_right = 77.0
offset_bottom = 29.0
text = "start"
label_settings = SubResource("LabelSettings_bjwww")

[node name="Player" parent="." instance=ExtResource("3_gx567")]
position = Vector2(449, 316)

[node name="GameUI" parent="Player" instance=ExtResource("2_t4igd")]
z_index = 4096
z_as_relative = false
custom_minimum_size = Vector2(1280, 800)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -400.0
offset_right = 640.0
offset_bottom = 400.0

[node name="BossUi" parent="Player/GameUI" instance=ExtResource("13_t3osn")]
layout_mode = 1

[node name="BossSpawnPoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(680, 369)

[node name="FlamethrowerCollectible" parent="." instance=ExtResource("8_gm5sp")]
position = Vector2(252, 120)

[node name="BasicGunCollectible" parent="." instance=ExtResource("7_ct2rc")]
position = Vector2(164, 224)

[node name="RifleGunCollectible" parent="." instance=ExtResource("6_fsmji")]
position = Vector2(149, 358)

[node name="ShotGunCollectible" parent="." instance=ExtResource("5_j8i33")]
position = Vector2(203, 482)

[node name="Collectible" parent="." instance=ExtResource("4_d3rn1")]
position = Vector2(331, 539)

[connection signal="body_entered" from="BossSpawnTrigger" to="." method="_on_boss_spawn_trigger_body_entered"]
